# Programming-architecture-and-patterns

./: Cargo.toml  Makefile.toml  readme.md
.github/misc/: buil_dpattern  chainded_workflow.yml  check_rust_prj.yml  cover_code.yml  cover_code1  usefull_workflows.yml
.github/workflows/: chainded_workflow.yml  check_rust_prj.yml  ci.yml  simple1.yml  test_stable_rust.yml  workflow0.yml  workflow_test_rust_nightly.yml
.github/workflows/misc/: release.yml  simple1.yml  workflow0.yml
TEMP/abstract_factory/src/: main.rs
TEMP/command/src/: main.rs
TEMP/factory_method/src/: main.rs
TEMP/patterns1/: Cargo.toml
TEMP/patterns1/src/: main.rs
TEMP/patterns2/: Cargo.toml
TEMP/patterns2/src/: main.rs
__oldtests/test1/: Cargo.toml  xtask
__oldtests/test1/src/: main.rs
__oldtests/test1/test_inner/: Cargo.toml
__oldtests/test1/test_inner2/: Cargo.toml
actors/: Cargo.toml
game-mechanicsv2/src/: actions.rs  obj_mech.rs
game-mechanicsv2/tests/: test_obj.rs
homework#1/src/lib/: squareroot.rs
homework#1_unittests/: Cargo.toml
homework#2_server_client_setup/: Cargo.toml  readme.md
homework#2_server_client_setup/lib_shouse/: Cargo.toml
homework#2_server_client_setup/lib_shouse/src/: lib.rs
homework#2_server_client_setup/server_tokio/: Cargo.toml
homework#2_server_client_setup/server_tokio/examples/: args.rs  client_example.rs
homework#2_server_client_setup/server_tokio/src/: ipc_message.rs  main.rs  server_socket_struct.rs  server_termometer_struct.rs
homework#2_setup_motherland/: Cargo.toml
homework#2_setup_motherland/client/: build.rs
homework#2_setup_motherland/game-mechanics/: Cargo.toml
homework#2_setup_motherland/proto/: server_client.proto
homework#2_setup_motherland/server/: Cargo.toml  build.rs
homework#2_setup_motherland_mock_tests/: Cargo.toml
homework#2_setup_motherland_mock_tests/client/: Cargo.toml
homework#2_setup_motherland_mock_tests/client/src/: client_main.rs
homework#2_setup_motherland_mock_tests/game-mechanics/: Cargo.toml
homework#2_setup_motherland_mock_tests/proto/: server_client.proto
homework#2_setup_motherland_mock_tests/server/: Cargo.toml
homework#2_setup_motherland_mock_tests/server/src/: main.rs
homework#2_setup_motherland_mock_tests/server/src/connection_processor/: battles.rs  input.rs  mod.rs
homework#3_command/: Cargo.toml
homework#3_command/game-mechanics/: Cargo.toml
homework#3_command/game-mechanics/src/: lib.rs
homework#3_command/game-mechanics/tests/: test_obj.rs
homework1/src/: main.rs
homework10_auth_service/: Cargo.toml  readme.md
homework10_auth_service/binaries/: libtemplates.rlib
homework12_chain_of_responsability/: Makefile.toml
homework12_chain_of_responsability/tests/: test_obj.rs
homework12_chain_of_resposability/: Cargo.toml
homework12_chain_of_resposability/src/lib/: commanding.rs  commands.rs  lib.rs
homework12_chain_of_resposability/tests/: test_obj.rs
homework13_microservices_arch/: readme.md
homework1_unittests/: Cargo.toml  readme.md
homework2_mocking/: Cargo.toml
homework2_mocking/tests/: test_obj.rs
homework3_command/: Cargo.toml  Makefile.toml
homework3_command/src/: actions.rs  lib.rs  obj_mech.rs
homework3_command/tests/: test_obj.rs
homework4_error_processing/: Cargo.toml  Makefile.toml
homework4_error_processing/src/: actions.rs  lib.rs  obj_mech.rs
homework4_error_processing/tests/: test_obj.rs
homework4_error_processing_v2/: Cargo.toml  readme.md
homework4_error_processing_v2/tests/: test_obj.rs
homework5_abstract_factory/: .gitignore  Cargo.toml  Makefile.toml  foo.txt  out_sorted  readme.md
homework5_abstract_factory/binaries/: .gitignore
homework5_abstract_factory/src/: bin.rs  bubblesort.rs  foo.txt  lib.rs  mergesort.rs  quicksort.rs
homework5_abstract_factory/tests/: test1.rs
homework6_adapter/: Cargo.toml
homework6_adapter/examples/: matrix_adapter.rs  matrix_creator.rs  matrix_reader.rs  somefile  sum_out
homework6_adapter/src/: lib.rs  main.rs  prog1_stucts.rs  somefile
homework6_adapter/tests/: test1.rs
homework6_adapter_independent/: Cargo.toml  readme.md
homework6_adapter_independent/.cargo/: config.toml
homework6_adapter_independent/binaries/: liblibmatrix.rlib  matrix_files  sum_matrix
homework6_adapter_independent/examples/: matrix_adapter.rs
homework6_adapter_independent/src/executables/: creator.rs  reader.rs
homework7/src/: actor_example.rs  lib.rs
homework7_actor_model_thread_queque/: Cargo.toml  readme.md
homework7_actor_model_thread_queque/binaries/: liblibsystem.rlib
homework7_actor_model_thread_queque/src/: actor_example.rs  lib.rs
homework7_actor_model_thread_queque/tests/: test1.rs
homework8_actor_model_via_tcpip/: Cargo.toml
homework9_IoC_plus_communication_broker/: Cargo.toml  readme.md
homework9_IoC_plus_communication_broker/binaries/: libtemplates.rlib
homework9_IoC_plus_communication_broker/src/agent_auth/conf/: conf.toml
homework9_IoC_plus_communication_broker/src/agent_gameserver/conf/: conf.toml
homework9_IoC_plus_communication_broker/src/agent_processor/conf/: conf.toml
homework9_IoC_plus_communication_broker/src/agent_sender/conf/: conf.toml
homework9_IoC_plus_communication_broker/src/templates/: data_exchange.rs  lib.rs
homework9_IoC_plus_communication_broker/tests/: test_obj.rs
homework9_communication_broker/: Cargo.toml  my.toml
homework9_communication_broker/src/agent/conf/: conf.toml
homework9_communication_broker/src/agent_gameserver/conf/: conf.toml
homework9_communication_broker/src/agent_processor/conf/: conf.toml
homework9_communication_broker/src/templates/: args.rs  data_exchange.rs  lib.rs  sender.rs
misc/OPP_RUST/: Cargo.toml
misc/OPP_RUST/src/: main.rs
misc/homework2/: Cargo.toml
misc/test_rust_and_wat/: Cargo.toml  add2.wat  test_wasi.wasm
misc/testcpp_prj/: CMakeLists.txt
mosquito_test/: Cargo.toml
testcpp_prj/: .gitignore
tests/test1/: Cargo.toml
write_json/: Cargo.toml
write_json/src/: main.rs  somefile
writer/: Cargo.toml  somefile
writer/src/: main.rs  main.rs22  main.rs_cpy
(+44 files in other folders)
