[package]
name = "hw12_chain_of_responsability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "binary"
path = "src/bin/main.rs"


[lib]
name = "libcommand"
path = "src/lib/lib.rs"

[dependencies]
thiserror = "1.0.40"
