[package]
name = "homework4_error_processing"
version = "0.1.0"
edition = "2021"


[lib]
name = "lib_game"
path = "src/lib.rs"

[dependencies]
mockall = "0.11.4"
rstest = "0.17.0"
thiserror = "1.0.40"
slog = "2.7.0"
slog-async = "2.7.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.0"
