[package]
name = "abstract_fabric"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_sorting"
path = "src/lib.rs"

[[bin]]
name = "sorting-app"
path = "src/bin.rs"


[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
clap = { version = "4.2.4", features = ["derive"] }
fastrand = "1.9.0"
thiserror = "1.0.40"
