[package]
name = "adapter"
version = "0.1.0"
edition = "2021"


[lib]
name = "libmatrix"
path = "./src/lib.rs"

[dependencies]
bytes = "1.4.0"
hex = "0.4.3"
postcard = { version ="1.0.4",features = ["alloc"]}
serde = {version = "1.0.159",features =["derive"]}
serde_with = "2.3.2"
fastrand = "1.9.0"
byteorder = "1.4.3"
clap = { version = "4.2.4", features = ["derive"] }
