[package]
name = "mosquito_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "agent"
path = "src/agent/bin/main.rs"

[dependencies]
pretty_env_logger = "0.5.0"
rumqttc = "0.21.0"
time = "0.3.21"
tokio = { version = "1.28.1", features = ["rt", "macros", "io-util", "net", "time"] }
