[package]
name = "mosquito_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "agent_sender"
path = "src/agent_sender/bin/main.rs"

[[bin]]
name = "agent_processor"
path = "src/agent_processor/bin/main.rs"

[lib]
name = "templates"
path = "src/templates/lib.rs"

[dependencies]
base64 = "0.21.1"
bincode = "1.3.3"
chrono = "0.4.24"
erased-serde = "0.3.25"
figment = {version = "0.10.8", features = ["toml","env","json"]}
pretty_env_logger = "0.5.0"
rumqttc = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_traitobject = "0.2.8"
time = "0.3.21"
tokio = { version = "1.28.1", features = ["rt", "macros", "io-util", "net", "time"] }
typetag = "0.2.8"
