[package]
name = "server_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_shouse = { path ="../lib_shouse" }
thiserror = "*"
clap = {version = "*", features = ["derive"]}
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
bytes = {version = "*", features = ["serde"]}
serde = {version = "*",features = ["derive"]}
bincode = "*"
socket2 = {version ="*"}
tokio-util = {version="0.7.4",features=["codec"]}
futures = "*"
futures-util = "0.3"
rand = "*"
tracing = "0.1"
tracing-subscriber = "0.2.25"
