[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin"
path = "src/main.rs"

[lib]
name = "lib_common_server"
path = "./src/lib.rs"

[dependencies]
blake2 = "0.10.6"
mockall = "0.11.4"
prost = "0.11.8"
prost-types = "0.11.8"
smallvec = "1.10.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
#connection_processor = {path ="./connection_processor"}
game-mechanics = {path ="../game-mechanics"}
futures = "0.3.28"
random_name_generator = "0.3.3"

[build-dependencies]
tonic-build = "0.8.3"
prost-build = "0.11.8"

[dev-dependencies]
anyhow = "1.0.68"
rstest = "0.17.0"
mockall = "0.11.4"
num = "0.4.0"
thiserror = "1.0.38"

