[package]
name = "game_mechanics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib_game_mech"
path = "./src/lib.rs"

[dependencies]
thiserror = "1.0.40"
mockall = {version = "0.11.4", feature="nightly"}
rstest = "0.17.0"
[dev-dependencies]

